--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -56,8 +56,8 @@ p {
 <body>
 <h1>Media Queries</h1>
 
-<p id="p1"></p>
-<p id="p2"></p>
+<p id="p1"> test</p>
+<p id="p2">test 2</p>
 
 </body>
 </html>
