--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,132 +2,15 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="css/main.css">
 <title>Lyda</title>
 <style>
 
 
-h2 {
-  text-align: center;
-  font-size: 75px;
-  
-}
-
-p {
-  border: 1px solid black;
-  background-color: #FF69B4;
-  width: 90%;
-  height: 150px;
-  margin-right: auto;
-  margin-left: auto;
-  font-family: Helvetica;
-  color: white;
-  padding-bottom: 10px;
- 
-}
-
-/* Simple Responsive Framework. */
-.row {
-  width: 100%;
-}
-
-.title{
-	  float: right;
-	  padding:10px;
-	   border: 1px solid black;
-	font-family: Helvetica;
-	font-weight: bold;
-	
-	
-  }
-  
-  .first{
-	  background-color:#2196F3;
-  }
-  .second{
-	   background-color:#ff9800;
-  }
-  .third{
-	  background-color:#04AA6D;
-  }
-  
-  .description {
-    margin-top:20px; 
-    padding-left:10px; 
-    display:inline-block;
-	 
-  }
-/********** Mobile devices only **********/
-@media  min-width: 400px) and (max-width: 767px) {
- .col-lg-3 {
-    float: left;
-  
-  }
-
-  .col-lg-3 {
-    width: 100%;
-  }
-  
-  .col-lg-6 {
-    width: 100%;
-  }
-  .div{
-  float : right;
-  }
-  .title{
-  float: right;
-  }
-}
-
-
-/********** Tablet devices only **********/
-@media (min-width: 768px) and (max-width: 991px) {
- .col-lg-3 {
-    float: left;
-   
-  }
-
-  .col-lg-3 {
-    width: 50%;
-  }
-  
-  .col-lg-6 {
-    width: 50%;
-  }
-  .div{
-  float : right;
-  }
-  .title{
-  float: right;
-  }
-}
-
-
-
-/********** Large devices only **********/
-@media (min-width: 992px) {
- .col-lg-3 {
-    float: left;
-    border: 1px;
-  }
-
-  .col-lg-3 {
-    width: 33%;
-  }
-  
-  .col-lg-6 {
-    width: 33%;
-  }
-  .div{
-  float : right;
-  }
-  
-}
 </style>
 </head>
 <body>
 <h2>Elora Menu </h2>
-
 <div class="row">
   <div class="col-lg-3"><p><span class='title first'>ICE Cream</span></br></br></br><span class='description'> A soft, sweet frozen food made with milk and cream and typically flavoured with vanilla, fruit, or other ingredients</span></p></div>
   <div class="col-lg-3"><p><span class='title second'>CHOCOLATE</span></br></br></br><span class='description'>A food in the form of a paste or solid block made from roasted and ground cacao seeds, typically sweetened and eaten as confectionery.</span></p></div>
