--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -3,14 +3,10 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" href="css/main.css">
-<title>Lyda</title>
-<style>
-
-
-</style>
+<title>Lydia Coursera Test</title>
 </head>
 <body>
-<h2>Elora Menu </h2>
+<h2>Elora Menu</h2>
 <div class="row">
   <div class="col-lg-3"><p><span class='title first'>ICE Cream</span></br></br></br><span class='description'> A soft, sweet frozen food made with milk and cream and typically flavoured with vanilla, fruit, or other ingredients</span></p></div>
   <div class="col-lg-3"><p><span class='title second'>CHOCOLATE</span></br></br></br><span class='description'>A food in the form of a paste or solid block made from roasted and ground cacao seeds, typically sweetened and eaten as confectionery.</span></p></div>
