--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -48,7 +48,7 @@
 		Our Menu</li> </h2>
 		
 		
-        <li id="chicken" ><a class='title first' href="#chicken"  >Chicken </a> 
+        <li id="chicken" ><a  href="#chicken"  > <div  class="col-4 d-flex justify-content-center text-center title first" > Chicken </div></a> 
 		The chicken is a domesticated junglefowl species, 
 		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
 		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
@@ -86,7 +86,7 @@
 		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
 		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
 		</li>
-        <li id="beef"><a  class='title second' href="#beef" >Beef</a>
+        <li id="beef"><a  href="#beef"  > <div  class="col-4 d-flex justify-content-center text-center title second" > Beef </div></a>
 		Beef is the culinary name for meat from cattle. In prehistoric times, humans hunted aurochs and later domesticated them. Since that time, 
 		numerous breeds of cattle have been bred specifically for the quality or quantity of their meat.
 		Beef is the culinary name for meat from cattle. In prehistoric times, humans hunted aurochs and later domesticated them. Since that time, 
@@ -104,7 +104,7 @@
 		Beef is the culinary name for meat from cattle. In prehistoric times, humans hunted aurochs and later domesticated them. Since that time, 
 		numerous breeds of cattle have been bred specifically for the quality or quantity of their meat.
 		</li>
-		 <li id="sushi"><a class='title third' href="#sushi" >Sushi</a>
+		 <li id="sushi"><a  href="#sushi"  > <div  class="col-4 d-flex justify-content-center text-center title third" > Sushi </div></a>
 		 Sushi is a Japanese dish of prepared vinegared rice, usually with some sugar and salt, accompanied by a variety of ingredients, such as seafood,
 		 often raw, and vegetables. Styles of sushi and its presentation vary widely, but the one key ingredient is "sushi rice", also referred to as shari, 
 		 or sumeshi.
