--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -44,8 +44,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse "  id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-	  <h2>
-		Our Menu</li> </h2>
+	 
+		 <h2><div  class="col-4 d-flex justify-content-center text-center heading">Our Menu</div> </h2> 
 		
 		
         <li id="chicken" ><a  href="#chicken"  > <div  class="col-4 d-flex justify-content-center text-center title first" > Chicken </div></a> 
