--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -85,6 +85,117 @@
 		The chicken is a domesticated junglefowl species, 
 		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
 		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		The chicken is a domesticated junglefowl species, 
+		with attributes of wild species such as the grey and the Ceylon junglefowl that are originally from Southeastern Asia.
+		Rooster or cock is a term for an adult male bird, and a younger male may be called a cockerel. A male that has been castrated is a capon
+		
 		</li>
         <li id="beef"><a  href="#beef"  > <div  class="col-4 d-flex justify-content-center text-center title second" > Beef </div></a>
 		Beef is the culinary name for meat from cattle. In prehistoric times, humans hunted aurochs and later domesticated them. Since that time, 
